# OS_FinalProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.txt  main.c  sim
src/: graph_sim
src/app/: anim.c  anim.h  main.c
src/core/: common.h  config.h  dijkstra.c  dijkstra.h  graph.c  graph.h  traveler.c  traveler.h  vertex_lock.c  vertex_lock.h
src/render/: draw.c  draw.h
